got home page up

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,12 @@
 <!doctype html>
-
 <html>
 <head>
-	<title>HCI Project</title>
+	<title>Beach Bum</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/introHCI.css" rel="stylesheet">
-	<!-- this is a comment in HTML -->
+	<link href="/css/index.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,35 +18,15 @@
 
 <body>
 	<div class="container">
-		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>HCI Project</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-		</div>
-    	
-    	<ol>
-    	{{#each projects}}
-      	<li><a href="#{{id}}">{{name}}</a></li>
-    	{{/each}}
-    	</ol>
-
-		<h4>Projects</h4>
-		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
-		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
-		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		
-    	{{#each projects}}
-	    <div class="project" id="{{id}}">
-    		<a href="project/{{name}}" class="thumbnail">
-        	<img src="images/{{image}}" class="img">
-        	<p>{{name}}</p>
-      		</a>
-    	</div>
-    	{{/each}}
+    
+    <div class="circle" id="title">Beach Bum</div>
+    <div id="bottonline">
+    <div class="botton" id="login">Login</div>
+    <div class="botton" id="sign">Sign Up</div></div>
+    <div class="botton" id="find">Find a Beach</div>
 
 	</div>
-
+	
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 </body>
