--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,8 +26,15 @@
     <div class="botton" id="find">Find a Beach</div>
 
 	</div>
-	
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+
+<script>
+
+$( "#login" ).click(function() {
+$( this ).slideUp();
+});
+
+</script>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
