--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@ body{
 	position: relative;
     width: 100%;
     display: block;
+    background: blue;/* background color of app*/
 }
 .container{
 	width:400px;
@@ -9,9 +10,10 @@ body{
 #title{
 }
 .botton{
+	height: 100px;
+	background: red;/*default background color for bottons*/
 }
-.circle
-{
+.circle{
 width:300px;
 height:300px;
 border-radius: 50%;
@@ -25,11 +27,17 @@ background:red; /*center circle color*/
 	width:400px;
 	clear:both;	
 }
-#login{
+.botton #login{
 	width:200px;
 	float:left;
+	background: blue; /*sign in background color*/
 }
-#sign{
+.botton #sign{
 	width:200px;
 	float:right;
+	background:red; /*sign in background color*/
+}
+.botton #find{
+	width:400px;
+	background:green; /*sign in background color*/
 }
