--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@ body{
 	position: relative;
     width: 100%;
     display: block;
-    background: blue;/* background color of app*/
+    background: white;/* background color of app*/
 }
 .container{
 	width:400px;
@@ -10,12 +10,20 @@ body{
 #title{
 }
 .botton{
-	height: 100px;
+	margin:10px 0;
+	font-size:40px;
+	color:#fff; /* center font color*/
+	text-align: center;
+	-moz-border-radius: 12px; /* FF1+ */
+	-webkit-border-radius: 12px; /* Saf3-4 */
+  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
+  	height: 60px; /* height for all three bottons on front page*/
 	background: red;/*default background color for bottons*/
 }
 .circle{
 width:300px;
 height:300px;
+
 border-radius: 50%;
 font-size:50px;
 color:#fff; /* center font color*/
@@ -25,19 +33,22 @@ background:red; /*center circle color*/
 }
 #bottonline{
 	width:400px;
-	clear:both;	
+	clear:both;
 }
-.botton #login{
-	width:200px;
+#login{
+	margin-right: 5px;
+	width:195px;
 	float:left;
 	background: blue; /*sign in background color*/
 }
-.botton #sign{
-	width:200px;
+#sign{
+	margin-left: 5px;
+	width:195px;
 	float:right;
 	background:red; /*sign in background color*/
 }
-.botton #find{
+#find{
+	clear:both;
 	width:400px;
 	background:green; /*sign in background color*/
 }
