--- a/views/beachlist.html
+++ b/views/beachlist.html
@@ -1,2 +1,20 @@
-<div class="button">
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+		<title> Find a Beach </title>
+	</head>
+
+
+<body>
+	<div class="button">
+		<ul>
+			<li> <a href="first link"> La Jolla Shores </a> </li>
+			<li> <a href="second page"> Oceanside Beach </a> </li>
+			<li> <a href="third page"> Pacific Beach </a> </li>
+			<li> <a href="fourth page"> Coronado Beach </a> </li>
+			<li> <a href="fifth page"> La Jolla Shores </a> </li>
+		</ul>	
+	</div>
+
+</body>
+</html>
