--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,17 +21,19 @@
     
     <div class="circle" id="title">Beach Bum</div>
     <div id="bottonline">
-    <div class="botton" id="login"><a href="#">Login</a></div>
+    <div class="botton" id="login"><a href="login">Login</a></div>
     <div class="botton" id="sign"><a href="#">Sign Up</a></div></div>
     <div class="botton" id="find"><a href="#">Find a Beach</a></div>
 
 	</div>
 
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script>
-function loadMainContent(){
-	alert("Clicked");
+function loadMainContent( pagename ){
+	
    //var pagename = pagehash;//pagehash.substring(1, pagehash.length);
-	$( ".container" ).load( pagename + ".html", function( response, status, xhr ) {
+	$( ".container" ).load("/views/" + pagename + ".html", function( response, status, xhr ) {
 		if ( status == "error" ) {
 		var msg = "Sorry but there was an error: ";
 		$( "#error" ).html( msg + xhr.status + " " + xhr.statusText );
@@ -39,12 +41,10 @@ function loadMainContent(){
 }
 
 $( document ).ready(function() {
-	$("div#login").click(function() { loadMainContent(); });
+	$("#login a").click(function() { loadMainContent("login"); });
+	$("#find a").click(function() { loadMainContent("beachlist"); });
 });
-
-
 </script>
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+
 </body>
 </html>
