--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,7 @@
 
 <body>
 	<div class="container">
-    
-    <div class="circle" id="title">Beach Bum</div>
+    <div class="circle" id="title"> San Diego Beach Bum</div>
     <div id="bottonline">
     <div class="botton" id="login"><a href="#">Login</a></div>
     <div class="botton" id="sign"><a href="#">Sign Up</a></div></div>
