--- a/views/login.html
+++ b/views/login.html
@@ -15,12 +15,12 @@
 
 <!-- where I started my coding -->
 	<body>
-		<h2> BEACH BUM LOGIN: </h2>
+		<h2> WELCOME TO BEACH BUM </h2>
 
 		<form id="myForm" action="form_action.asp">
 		<p><strong> USERNAME: </stong> 
 			<input type="text" name="fname"> <br><br> </p>
-		<p><strong> PASSSWORD: </strong> 
+		<p><strong> PASSWORD: </strong> 
 			<input type="text" name="Iname"><br><br> </p>
 		<input type="button" onclick="myFunction()" value="LOGIN">
 
