added logo and tagline

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,10 @@
 
 <body>
 	<div class="container">
-    
-    <div class="circle" id="title">Beach Bum</div>
+    <div class="container">
+    <!-- <div class="circle" id="title"> Beach Bum</div> -->
+    <img id="homeimg" src="/images/logo.png" alt="homepage logo"><br>
+    <p id="tagline"> A beach weather app.</p>
     <div id="bottonline">
     <div class="botton" id="login"><a href="#">Login</a></div>
     <div class="botton" id="sign"><a href="#">Sign Up</a></div></div>
