--- a/public/css/index.css
+++ b/public/css/index.css
@@ -26,18 +26,31 @@ body{
 
 	background: #00C9AD;/*default background color for bottons*/
 }
+
+#tagline{
+	font-size: 26px;
+	text-align: right;
+	padding-right: 5px;
+}
+
+#homeimg{
+	width: 400px;
+}
+
+/*
 .circle{
 width:300px;
 height:300px;
 
 border-radius: 50%;
 font-size:100px;
-color:#fff; /* center font color*/
+color:#fff; /* center font color
 line-height:300px;
 text-align:right;
 padding-right: 20px;
-background:#F0DE63; /*center circle color*/
+background:#F0DE63; /*center circle color
 }
+*/
 #bottonline{
 	width:400px;
 	clear:both;
