--- a/views/beachlist.html
+++ b/views/beachlist.html
@@ -1,13 +1,20 @@
 <link href="/css/beachlist.css" rel="stylesheet">
-<div class="button">
+
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+
+
+<div class="container">
 	<ul>
-		<li><a href="#"> La Jolla Shores </a></li>
-		<li><a href="#"> Oceanside Beach </a></li>
-		<li><a href="#"> Pacific Beach </a></li>
-		<li><a href="#"> Coronado Beach </a></li>
-		<li><a href="#"> La Jolla Shores </a></li>
+		<li class="fbotton" id="LaJolla"><a href="#"> La Jolla Shores </a></li>
+		<li class="fbotton" id="Oceanside"><a href="#"> Oceanside Beach </a></li>
+		<li class="fbotton" id="Pacific"><a href="#"> Pacific Beach </a></li>
+		<li class="fbotton" id="Coronado"><a href="#"> Coronado Beach </a></li>
+		<li class="fbotton" id="MissionBay"><a href="#"> Mission Bay </a></li>
 	</ul>
 </div>
+
+
 
 <script type="text/javascript">
 function loadDummyContent(){
