--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,5 +1,5 @@
 <link href="/css/beachlist.css" rel="stylesheet">
-<div class="button">
+<div class="button" id="blist">
 	<ul>
 		<li><a href="#"> La Jolla Shores </a></li>
 		<li><a href="#"> Oceanside Beach </a></li>
