--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
 <!-- where I started my coding -->
 	<h2> BEACH BUM LOGIN: </h2>
 
-	<form id="myForm" action="form_action.asp">
+	<form id="loginForm" action="form_action.asp">
 	<p><strong> USERNAME: </stong> 
 		<input type="text" name="fname"> <br><br> </p>
 	<p><strong> PASSSWORD: </strong> 
