--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
 	<body>
 		<h2> WELCOME TO BEACH BUM </h2>
 
-		<form id="myForm" action="form_action.asp">
+		<form id="log" action="form_action.asp">
 		<p><strong> USERNAME: </stong> 
 			<input type="text" name="fname"> <br><br> </p>
 		<p><strong> PASSWORD: </strong> 
