--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -25,4 +25,4 @@ function loadDummyContent(){
 $( document ).ready(function() {
 	$("li a").click(function() { loadContent(); });
 });
-</script>>
+</script>
