tring to fix links

--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,4 +1,4 @@
-<link href="/css/beachlist.css" rel="stylesheet">
+<!-- link href="/css/beachlist.css" rel="stylesheet" -->
 
 <div class="button" id="blist">	
 	<ul>
@@ -6,14 +6,15 @@
 		<li class="fbotton" id="Oceanside"> <a href="#"> Oceanside Beach </a> </li>
 		<li class="fbotton" id="Pacific"> <a href="#"> Pacific Beach </a> </li>
 		<li class="fbotton" id="Coronado"> <a href="#"> Coronado Beach </a> </li>
-		<li class="fbotton" id="MissionBay"> <a href="#"> Mission Bay </a> </li>
+		<li class="fbotton" id="MissionBay"> <a href="#">Mission Bay</a> </li>
 	</ul>
 </div>
 
 
-<script type="text/javascript">
-function loadDummyContent(){
-	console.log("ajax called dummy");
+<script>
+console.log("ajax called dummy");
+function loadDummyContent( pagename ){
+	console.log("ajax called on this one");
    //var pagename = pagehash;//pagehash.substring(1, pagehash.length);
 	$( ".container" ).load( "/dummy" , function( response, status, xhr ) {
 		if ( status == "error" ) {
@@ -23,6 +24,9 @@ function loadDummyContent(){
 }
 
 $( document ).ready(function() {
-	$("li a").click(function() { loadContent(); });
+	$("a").click( function(){alert("clicked"); })
+	$("#login a").click(function() { loadMainContent("login"); });
+	//$("a").click(function() { loadDummyContent("beachlist"); });
+	//$("#find a").click(function() { loadMainContent(""); });
 });
 </script>
