update beach background

--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -1,5 +1,6 @@
 .container{
 	width:400px;
+	background-color: #00c9AD;
 }
 
 #login{
@@ -9,15 +10,15 @@
 
 .fbotton{
 	margin:10px 0;
-	font-size:20px;
-	color:#fff; /* center font color*/
+	font-size:35px;
+	color:black; /* center font color*/
 	text-align: center;
-	-moz-border-radius: 12px; /* FF1+ */
-	-webkit-border-radius: 12px; /* Saf3-4 */
-  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
+	-moz-border-radius: 14px; /* FF1+ */
+	-webkit-border-radius: 14px; /* Saf3-4 */
+  	border-radius: 14px; /* Opera 10.5, IE 9, Saf5, Chrome */	
   	height: 60px; /* height for all three bottons on front page*/
 
-	background: #00C9AD;/*default background color for bottons*/
+	background: #F0DE62;/*default background color for bottons*/
 }
 
 #LaJolla {
