--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -3,6 +3,7 @@
 
 <div class="container">
 	<ul>
+		<li class="fbotton" id="LaJolla"><a href="#"> Back </a> </li>
 		<li class="fbotton" id="LaJolla"><a href="#"> La Jolla Shores </a> </li>
 		<li class="fbotton" id="Oceanside"> <a href="#"> Oceanside Beach </a> </li>
 		<li class="fbotton" id="Pacific"> <a href="#"> Pacific Beach </a> </li>
