--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -1,17 +1,12 @@
-
 #blist{
 	background: 00C9AD;
 	text-decoration: none;
 }
-
 li{
 	height:60px;
-	width: 300px;
 	list-style-type: none;
 }
-
-.container{
-	width:400px;
+body{
 	background-color: #00c9AD;
 }
 
@@ -20,6 +15,7 @@ li{
 	width:195px;
 }
 .fbotton{
+	width: 400px;
 	margin:10px 0;
 	font-size:35px;
 	color:black; /* center font color*/
@@ -29,28 +25,4 @@ li{
   	border-radius: 14px; /* Opera 10.5, IE 9, Saf5, Chrome */	
   	height: 60px; /* height for all three bottons on front page*/
 	background: #F0DE62;/*default background color for bottons*/
-}
-
-#LaJolla {
-	margin-right: 5px;
-	width:195px;
-}
-
-#Pacific {
-	margin-right: 5px;
-	width:195px;
-}
-#Coronado {
-	margin-right: 5px;
-	width:195px;
-}
-
-#Oceanside{
-	margin-right: 5px;
-	width:195px;
-}
-
-#MissionBay{
-	margin-right: 5px;
-	width:195px;
 }
