--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -1,6 +1,6 @@
 
 #blist{
-	background: 00C9AD;
+	background: #00C9AD;
 	text-decoration: none;
 }
 
@@ -21,15 +21,17 @@ li{
 }
 .fbotton{
 	margin:10px 0;
-	font-size:35px;
+	font-size:40px;
 	color:black; /* center font color*/
 	text-align: center;
-	-moz-border-radius: 14px; /* FF1+ */
-	-webkit-border-radius: 14px; /* Saf3-4 */
-  	border-radius: 14px; /* Opera 10.5, IE 9, Saf5, Chrome */	
-  	height: 60px; /* height for all three bottons on front page*/
+	-moz-border-radius: 12px; /* FF1+ */
+	-webkit-border-radius: 12px; /* Saf3-4 */
+  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
+  	height: 65px; /* height for all three bottons on front page*/
+	width: 400px; /*width of the buttons*/
 	background: #F0DE62;/*default background color for bottons*/
 }
+
 
 #LaJolla {
 	margin-right: 5px;
