back lgoin link

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,13 +10,19 @@
 	<div class="container"> 
 	<div class="botton" id="back"> <a href="#"> Back </a> </div>
 	<form id="myForm" action="form_action.asp">
-	<p><strong id="username"> USERNAME: </stong> 
+	<p><strong id="username">USERNAME: </strong> 
 		<input type="text" name="fname"> <br><br> </p>
-	<p><strong id="password"> PASSWORD: </strong> 
+	<p><strong id="password">PASSWORD: </strong> 
 		<input type="text" name="Iname"><br><br> </p>
 	<input type="button" onclick="myFunction()" value="LOGIN">
-
+	</form>
+	
 <script>
+$(document).ready( function(){ 
+$("#back a").click(function() { window.location.href="/"; });
+
+});
+
 function myFunction(){
 document.getElementByld("Form").submit();
 }
