--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-		<title> Login Form </title>
-	</head>
-<!-- not sure what this is for -->
-
 <div id="form">
 <div class="button" id="fb">
 
@@ -13,31 +6,27 @@
 
 </div>
 
-<!-- where I started my coding -->
-	<body>
-		
-		<div class="container"> 
-		<div class="botton" id="back"> <a href="#"> Back </a> </div>
-
-		<form id="myForm" action="form_action.asp">
-		<p><strong id="username"> USERNAME: </stong> 
-			<input type="text" name="fname"> <br><br> </p>
-		<p><strong id="password"> PASSWORD: </strong> 
-			<input type="text" name="Iname"><br><br> </p>
-		<input type="button" onclick="myFunction()" value="LOGIN">
-
-		<script>
-		function myFunction()
-		{
-		document.getElementByld("Form").submit();
-		}
-		</script>
-		
-		
-		<!-- not sure how to get the facebook login button to work :( 
-		but here's the site I found thats useful: 
-		https://developers.facebook.com/docs/facebook-login/login-flow-for-web/) -->
+<!-- where I started my coding -->	
+	<div class="botton" id="back"> <a href="#"> Back </a> </div>
+	<form id="myForm" action="form_action.asp">
+	<p><strong id="username"> USERNAME: </strong> 
+		<input type="text" name="fname"> <br><br> </p>
+	<p><strong id="password"> PASSWORD: </strong> 
+		<input type="text" name="Iname"><br><br> </p>
+	<input type="button" onclick="myFunction()" value="LOGIN">
+	</form>
 	
-	</div>
-	</body>
-</html>
+<script>
+$(document).ready( function(){ 
+$("#back a").click(function() { window.location.href="/"; });
+
+});
+
+function myFunction(){
+document.getElementByld("Form").submit();
+}
+</script>
+		
+	<!-- not sure how to get the facebook login button to work :( 
+	but here's the site I found thats useful: 
+	https://developers.facebook.com/docs/facebook-login/login-flow-for-web/) -->
