--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,17 +6,18 @@
 
 </div>
 
-<!-- where I started my coding -->		
-	<div class="container"> 
+<!-- where I started my coding -->	
 	<div class="botton" id="back"> <a href="#"> Back </a> </div>
-	<form id="myForm" action="form_action.asp">
-	<p><strong id="username">USERNAME: </strong> 
-		<input type="text" name="fname"> <br><br> </p>
-	<p><strong id="password">PASSWORD: </strong> 
-		<input type="text" name="Iname"><br><br> </p>
+	<form id="myForm" action="get">
+	<div class="form-group">
+	<p><strong id="username"> USERNAME: </strong> 
+		<input class="form-control" type="text" name="fname"> <br><br> </p>
+		</div><div class="form-group">
+	<p><strong id="password"> PASSWORD: </strong> 
+		<input class="form-control" type="text" name="Iname"><br><br> </p></div>
 	<input type="button" onclick="myFunction()" value="LOGIN">
 	</form>
-	
+
 <script>
 $(document).ready( function(){ 
 $("#back a").click(function() { window.location.href="/"; });
