--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,13 @@
 <div id="form">
-<div class="button" id="fb">
+<!-- div class="button" id="fb" -->
 
 </div>
 <div id="fb-root"></div>
 
 </div>
-
+<link href="/css/login.css" rel="stylesheet">
 <!-- where I started my coding -->	
-	<div class="botton" id="back"> <a href="#"> Back </a> </div>
+	<div class="button" id="back"> <a href="#">Back</a></div>
 	<form id="myForm" action="get">
 	<div class="form-group">
 	<p><strong id="username"> USERNAME: </strong> 
@@ -15,7 +15,7 @@
 		</div><div class="form-group">
 	<p><strong id="password"> PASSWORD: </strong> 
 		<input class="form-control" type="text" name="Iname"><br><br> </p></div>
-	<input type="button" onclick="myFunction()" value="LOGIN">
+	<button class="btn btn-default" type="button" onclick="myFunction()">LOGIN</button>
 	</form>
 
 <script>
