--- a/views/login.html
+++ b/views/login.html
@@ -19,6 +19,9 @@
 	</form>
 
 <script>
+function submitForm(){
+	loadMainContent("/dummy");
+}
 $(document).ready( function(){ 
 $("#back a").click(function() { window.location.href="/"; });
 
