unable to fix fonts

--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 <div id="form">
-<div class="button" id="fb">
+<!-- div class="button" id="fb" -->
 
 </div>
 <div id="fb-root"></div>
@@ -15,10 +15,11 @@
 		</div><div class="form-group">
 	<p><strong id="password"> PASSWORD: </strong> 
 		<input class="form-control" type="text" name="Iname"><br><br> </p></div>
-	<button class="btn btn-default" type="button" onclick="myFunction()">LOGIN</button>
+	<button class="btn btn-default" type="button" onclick="submitForm()">LOGIN</button>
 	</form>
 
 <script>
+
 function submitForm(){
 	loadMainContent("/dummy");
 }
