--- a/public/css/login.css
+++ b/public/css/login.css
@@ -15,9 +15,9 @@ body{
 	-moz-border-radius: 12px; /* FF1+ */
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
-  	height: 65px; /* height for all three bottons on front page*/
+  	height: 65px; /* height for all three buttons on front page*/
 	width: 400px; /*width of the buttons*/
-	background: #F0DE62;/*default background color for bottons*/
+	background: #F0DE62;/*default background color for buttons*/
 }
 div a{display:block;}
 a:hover{text-decoration: none;}
