--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -2,12 +2,12 @@
 
 <div class="button" id="blist">	
 	<ul>
-		<li class="fbotton" id="back"><a href="#"> Back </a> </li>
-		<li class="fbotton" id="LaJolla"><a href="#"> La Jolla Shores </a> </li>
-		<li class="fbotton" id="Oceanside"> <a href="#"> Oceanside Beach </a> </li>
-		<li class="fbotton" id="Pacific"> <a href="#"> Pacific Beach </a> </li>
-		<li class="fbotton" id="Coronado"> <a href="#"> Coronado Beach </a> </li>
-		<li class="fbotton" id="MissionBay"> <a href="#">Mission Bay</a> </li>
+		<li class="fbutton" id="back"><a href="#"> Back </a> </li>
+		<li class="fbutton" id="LaJolla"><a href="#"> La Jolla Shores </a> </li>
+		<li class="fbutton" id="Oceanside"> <a href="#"> Oceanside Beach </a> </li>
+		<li class="fbutton" id="Pacific"> <a href="#"> Pacific Beach </a> </li>
+		<li class="fbutton" id="Coronado"> <a href="#"> Coronado Beach </a> </li>
+		<li class="fbutton" id="MissionBay"> <a href="#">Mission Bay</a> </li>
 	</ul>
 </div>
 
