--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
 <head>
 	<title>Beach Bum</title>
 	<meta charset="utf-8">
-	<!--meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"-->
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
