--- a/views/login.html
+++ b/views/login.html
@@ -13,12 +13,9 @@
 
 <script>
 
-function submitForm(){
-	loadMainContent("/dummy");
-}
-$(document).ready( function(){ 
+function submitForm(){loadMainContent("/dummy");}
+$(document).ready( function(){
 $("#back a").click(function() { window.location.href="/"; });
-
 });
 
 function myFunction(){
