added image on the side

--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -3,7 +3,7 @@
 <div class="button" id="blist">	
 	<ul>
 		<li class="fbutton" id="back"><a href="#"> Back </a> </li>
-		<li class="fbutton" id="LaJolla"><a href="#"> La Jolla Shores </a> </li>
+		<li class="fbutton" id="LaJolla"><div><a href="#">La Jolla Shores </a><img src="/images/sunny.png"></div></li>
 		<li class="fbutton" id="Oceanside"> <a href="#"> Oceanside Beach </a> </li>
 		<li class="fbutton" id="Pacific"> <a href="#"> Pacific Beach </a> </li>
 		<li class="fbutton" id="Coronado"> <a href="#"> Coronado Beach </a> </li>
