--- a/views/pb.handlebars
+++ b/views/pb.handlebars
@@ -12,6 +12,7 @@
 		<div class="fbutton" id="back"><a href="#"> BACK </a></div>
 	</div>
 
+	<img id="weather" src="/images/sun-cloud-512.png" alt="weather logo"/> 
 	<p id="pagename"> PACIFIC BEACH </p>
 
 <!--login and help button at bottom-->
