edited css stuff

--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -1,29 +1,18 @@
 #blist{
 	background: #00C9AD;
-	text-decoration: none;
+}
+ul {
+	padding-left:0px;
 }
 li{
 	height:60px;
 	list-style-type: none;
 }
 body{
-	background-color: #00c9AD;
+	background-color: #00C9AD;
 }
-
-#login{
-	margin-right: 5px;
-	width:195px;
-}
-.fbutton{
-	margin:10px 0;
-	font-size:40px;
-	color:black; /* center font color*/
-	text-align: center;
-	-moz-border-radius: 12px; /* FF1+ */
-	-webkit-border-radius: 12px; /* Saf3-4 */
-  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
-  	height: 65px; /* height for all three buttons on front page*/
-	width: 400px; /*width of the buttons*/
+.button{
+	width: 100%; /*width of the buttons*/
 	background: #F0DE62;/*default background color for buttons*/
 }
 #back{
@@ -35,14 +24,14 @@ body{
 }
 
 li img{
-	/**/
-	margin-right:20px;
-	margin-top:5px;
-	width:57px;
-	height:57px;
+	/* left over 25% width*/
+	margin-right:25px;
+	margin-top:2px;
+	width:55px;
+	height:55px;
 	float:right;
 }
 a{
-	width:300px;
+	width:75%;
 	float:left;
 }
