--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -2,12 +2,12 @@
 
 <div class="button" id="blist">	
 	<ul>
-		<li class="fbutton" id="back"><a href="#">Back</a></li>
-		<li class="fbutton" id="LaJolla"><div><a href="#">La Jolla Shores </a><img src="/images/sunny.png"></div></li>
-		<li class="fbutton" id="Oceanside"><div><a href="#"> Oceanside Beach</a><img src="/images/fog1.png"></div></li>
-		<li class="fbutton" id="pb"><div><a href="#"> Pacific Beach</a><img src="/images/fog1.png"></div></li>
-		<li class="fbutton" id="Coronado"><div><a href="#"> Coronado Beach</a><img src="/images/cloud2.png"></div></li>
-		<li class="fbutton" id="MissionBay"><div><a href="#">Mission Bay</a><img src="/images/sunny.png"></div></li>
+		<li class="button" id="back"><a href="#">Back</a></li>
+		<li class="button" id="LaJolla"><div><a href="#">La Jolla Shores </a><img src="/images/sunny.png"></div></li>
+		<li class="button" id="Oceanside"><div><a href="#"> Oceanside Beach</a><img src="/images/fog1.png"></div></li>
+		<li class="button" id="pb"><div><a href="#"> Pacific Beach</a><img src="/images/fog1.png"></div></li>
+		<li class="button" id="Coronado"><div><a href="#"> Coronado Beach</a><img src="/images/cloud2.png"></div></li>
+		<li class="button" id="MissionBay"><div><a href="#">Mission Bay</a><img src="/images/sunny.png"></div></li>
 	</ul>
 </div>
 
