--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -5,7 +5,6 @@ ul {
 	padding-left:0px;
 }
 li{
-	height:60px;
 	list-style-type: none;
 }
 body{
@@ -16,11 +15,15 @@ body{
 	background: #F0DE62;/*default background color for buttons*/
 }
 #back{
+	display:block;
 	text-align: left;
 	padding-left: 90px;
 	font-size: 20px;
 	width: 200px;
 	height: 30px;
+}
+#back a{
+	display:block;
 }
 
 li img{
@@ -31,7 +34,11 @@ li img{
 	height:55px;
 	float:right;
 }
+div{
+	display: block;
+}
 a{
+	display:block;
 	width:75%;
 	float:left;
 }
