--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -1,3 +1,13 @@
+.navbar{
+
+}
+
+#back {
+	height:30px;
+	background-color: #FFFFFF
+	
+}
+
 #blist{
 	background: #00C9AD;
 }
@@ -14,6 +24,7 @@ body{
 	width: 100%; /*width of the buttons*/
 	background: #F0DE62;/*default background color for buttons*/
 }
+/*
 #back{
 	display:block;
 	text-align: left;
@@ -25,6 +36,7 @@ body{
 #back a{
 	display:block;
 }
+*/
 
 li img{
 	/* left over 25% width*/
