--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,8 +1,21 @@
 <link href="/css/beachlist.css" rel="stylesheet">
 
+<!-- Is this how you code a back button? -Ash -->
+<div>
+	<script>
+	function goBack()
+  		{
+  	window.history.back()
+  		}
+	</script>
+
+	<body>
+	<button onclick="goBack()" class="navbar" id="back">Back</button>
+	</body>
+</div>
+
 <div class="button" id="blist">	
 	<ul>
-		<li><div class="button" id="back"><a href="#">Back</a></div></li>
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img src="/images/sunny.png"></div></li>
 		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img src="/images/fog1.png"></div></li>
 		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img src="/images/fog1.png"></div></li>
