--- a/views/beachlist.html
+++ b/views/beachlist.html
@@ -17,11 +17,11 @@
 
 <div class="button" id="blist">	
 	<ul>
-		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img src="/images/sunny.png"></div></li>
-		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img src="/images/fog1.png"></div></li>
-		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img src="/images/fog1.png"></div></li>
-		<li><div class="button" id="Coronado"><a href="#"> Coronado Beach</a><img src="/images/cloud2.png"></div></li>
-		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img src="/images/sunny.png"></div></li>
+		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img src="/images/sun.png"></div></li>
+		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img src="/images/overcast.png"></div></li>
+		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img src="/images/sun.png"></div></li>
+		<li><div class="button" id="Coronado"><a href="#"> Coronado Beach</a><img src="/images/sunclouds1.png"></div></li>
+		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img src="/images/rain.png"></div></li>
 	</ul>
 </div>
 
