pb page changes

--- a/views/pb.handlebars
+++ b/views/pb.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Beach Bum </title>
-	<link href="/css/pb.css" rel="stylesheet">
+	<link href="/public/css/pb.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 		<div class="fbutton" id="back"><a href="#"> BACK </a></div>
 	</div>
 
-	<img id="weather" src="/images/sun-cloud-512.png" alt="weather logo"/> 
+	<img id="weather" src="../public/images/sun-cloud-512.png" alt="weather logo"/> 
 	<p id="pagename"> PACIFIC BEACH </p>
 
 <!--login and help button at bottom-->
