--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
 
 function submitForm(){loadMainContent("/dummy");}
 $(document).ready( function(){
-$("#back a").click(function() { window.location.href="/"; });
+$("#back a").click(function() { loadMainContent("Home")});
 });
 
 function myFunction(){
