--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,22 +1,8 @@
 <link href="/css/beachlist.css" rel="stylesheet">
 
-<!-- Is this how you code a back button? -Ash -->
-<div>
-	<script>
-	function goBack()
-  		{
-  	window.history.back()
-  		}
-	</script>
-
-	<body>
-	<button onclick="goBack()" class="navbar" id="back">Back</button>
-	</body>
-</div>
-
-
 <div class="button" id="blist">	
 	<ul>
+		<li><div class="button" id="back"><a href="#">Back</a></div></li>
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img src="/images/sun.png"></div></li>
 		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img src="/images/overcast.png"></div></li>
 		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img src="/images/sun.png"></div></li>
