--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,5 +1,4 @@
 <link href="/css/beachlist.css" rel="stylesheet">
-
 <!-- Is this how you code a back button? -Ash -->
 <div>
 	<script>
@@ -42,5 +41,6 @@ $( document ).ready(function() {
 	$("a").click( function(){ loadDummyContent("dummy") })
 	$("#back a").click(function() { window.location.href="/"; });
 	$("#pb a").click( function(){ loadMainContent("pb") });
+	$("#Oceanside a").click( function(){ loadMainContent("ob") });
 });
 </script>
